Layout Work All Done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <button class="btn">  <small>Learn More</small> </button>
                </div>
 
-               <div class="sub_cate">
+               <div class="sub_cate middle_sub_cate">
                 <h1 class="plan"> Professional</h1>
                 <h1 class="plan_amt"> &dollar;249.99</h1>
                 <ul  class="service_details">
@@ -43,7 +43,7 @@
                   <li class="service"> 5 Users Allowed</li>
                   <li class="service"> Send up to 10 GB</li>
                 </ul>
-                <button class="btn">  <small>Learn More</small> </button>
+                <button class="btn middle_btn">  <small>Learn More</small> </button>
               </div>
 
                <div class="sub_cate">
