Toggle Element Added

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
   <main class="main_container">
     <h1 class="heading">Our Pricing </h1>
-     <div class="toggle_class">
-         Annuall Monthly
-     </div> 
+        <div class="outer_container">
+            <div class="inner_container">
+        
+          </div>
+        </div>
    
      <div class="categories">
                <div class="sub_cate">
@@ -65,4 +67,5 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+<script src="script.js"></script>
 </html>
